examples/pos/multiline_extern_definition.effekt
extern def jsPrintNoop() at io: Unit = js """
  console.log("no-op")
"""

def main() = jsPrintNoop()
